add options config data source

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -4,3 +4,16 @@ img {
   max-height: 100%;
   max-width: 100%;
 }
+
+.subtitle {
+  text-align: center;
+}
+
+.hidden {
+  display: none !important;
+}
+
+.loading {
+  margin: 0 auto;
+  display: block;
+}
