--- a/src/options/options.css
+++ b/src/options/options.css
@@ -2,6 +2,10 @@
 body {
   min-width: 400px;
   min-height: 100px;
-  padding: 10px;
+  padding: 20px;
+}
+
+.data-source-wrapper {
+  min-width: 340px;
 }
 
